--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "tsx --no-cache ./node_modules/webpack-cli/bin/cli.js serve --config config/webpack.dev.ts",
     "build:dev": "tsx ./node_modules/webpack-cli/bin/cli.js --config config/webpack.dev.ts",
     "build:prod": "tsx ./node_modules/webpack-cli/bin/cli.js --config config/webpack.prod.ts",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss}\"",
+    "lint": "eslint --fix"
   },
   "keywords": [],
   "author": "",
