chore: Prettier 포맷팅에서 JSON 제외
- Prettier 포맷팅 대상에서 JSON 파일 제거
- package-lock.json과 같은 자동 생성 파일의 포맷팅 방지

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build:dev": "tsx ./node_modules/webpack-cli/bin/cli.js --config config/webpack.dev.ts",
     "build:prod": "tsx ./node_modules/webpack-cli/bin/cli.js --config config/webpack.prod.ts",
     "clean": "rm -rf dist",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,css,scss}\"",
     "lint": "eslint --fix"
   },
   "keywords": [],
