--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -13,71 +13,59 @@ on:
     paths: ["backend/**"]
 
 jobs:
-  setup-build-publish-deploy:
-    name: Setup, Build, Publish, and Deploy
+  build:
+
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
-        version: '290.0.1'
+        java-version: '17'
+        distribution: 'temurin'
+        
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+
+    - name: make application-prod.properties
+      run: | 
+        cd ./backend/src/main/resources
+        touch ./application-prod.properties
+        echo "${{ secrets.APPLICATION_PROD }}" > ./application-prod.properties
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./backend/gradlew
+
+    - name: Build with Gradle
+      run: |
+        cd backend
+        ./gradlew clean build -x test
+
+    # Google Cloud CLI 설정
+    - name: Set up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      with:
         service_account_key: ${{ secrets.GCE_SA_KEY }}
         project_id: ${{ secrets.GCE_PROJECT }}
 
-    # Configure Docker to use the gcloud command-line tool as a credential
-    # helper for authentication
-    - run: |-
-        gcloud --quiet auth configure-docker
-    # Build the Docker image
-    - name: Build
-      run: |-
-        docker build --tag "gcr.io/$PROJECT_ID/$GCE_INSTANCE-image:$GITHUB_SHA" .
-    # Push the Docker image to Google Container Registry
-    - name: Publish
-      run: |-
-        docker push "gcr.io/$PROJECT_ID/$GCE_INSTANCE-image:$GITHUB_SHA"
-    - name: Deploy
-      run: |-
-        gcloud compute instances update-container "$GCE_INSTANCE" \
-          --zone "$GCE_INSTANCE_ZONE" \
-          --container-image "gcr.io/$PROJECT_ID/$GCE_INSTANCE-image:$GITHUB_SHA"
+    # 3. Docker 이미지 빌드 및 GCR 업로드
+    - name: Build and Push Docker Image
+      run: |
+        docker build -t ${{ secrets.DOCKER_IMAGE }} .
+        docker push ${{ secrets.DOCKER_IMAGE }}
 
-# jobs:
-#   build:
-
-#     runs-on: ubuntu-latest
-#     permissions:
-#       contents: read
-#       packages: write
-
-#     steps:
-#     - uses: actions/checkout@v4
-#     - name: Set up JDK 17
-#       uses: actions/setup-java@v4
-#       with:
-#         java-version: '17'
-#         distribution: 'temurin'
-        
-#     - name: Setup Gradle
-#       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-
-#     - name: make application-prod.properties
-#       run: | 
-#         cd ./backend/src/main/resources
-#         touch ./application-prod.properties
-#         echo "${{ secrets.APPLICATION_PROD }}" > ./application-prod.properties
-
-#     - name: Grant execute permission for gradlew
-#       run: chmod +x ./backend/gradlew
-
-#     - name: Build with Gradle
-#       run: |
-#         cd backend
-#         ./gradlew clean build -x test
+    # 4. Cloud Run 배포
+    - name: Deploy to Cloud Run
+      run: |
+        gcloud run deploy spring-app \
+          --image ${{ secrets.DOCKER_IMAGE }} \
+          --platform managed \
+          --region ${{ secrets.GCP_REGION }} \
+          --allow-unauthenticated
 
 #     - name: Docker build
 #       run: |
