--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -57,6 +57,7 @@ jobs:
       run: |
         cd backend
         docker build -t ${{ secrets.DOCKER_IMAGE }} .
+        gcloud projects get-iam-policy ${{ secrets.GCE_PROJECT }}
         docker push ${{ secrets.DOCKER_IMAGE }}
 
     # VM에서 컨테이너 업데이트
