--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -51,6 +51,12 @@ jobs:
       with:
         service_account_key: ${{ secrets.GCE_SA_KEY }}
         project_id: ${{ secrets.GCE_PROJECT }}
+        
+    # Google Docker 인증
+    - name: Authenticate Docker to Google Cloud Container Registry (GCR)
+      run: |
+        echo ${{ secrets.GCE_SA_KEY }} | gcloud auth activate-service-account --key-file=-
+        gcloud auth configure-docker gcr.io
 
     # Docker 이미지 빌드 및 GCR 업로드
     - name: Build and Push Docker Image
