--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -31,19 +31,19 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
-    - name: make application-prod.properties
-      run: | 
-        cd ./backend/src/main/resources
-        touch ./application-prod.properties
-        echo "${{ secrets.APPLICATION_PROD }}" > ./application-prod.properties
+    # - name: make application-prod.properties
+    #   run: | 
+    #     cd ./backend/src/main/resources
+    #     touch ./application-prod.properties
+    #     echo "${{ secrets.APPLICATION_PROD }}" > ./application-prod.properties
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./backend/gradlew
+    # - name: Grant execute permission for gradlew
+    #   run: chmod +x ./backend/gradlew
 
-    - name: Build with Gradle
-      run: |
-        cd backend
-        ./gradlew clean build -x test
+    # - name: Build with Gradle
+    #   run: |
+    #     cd backend
+    #     ./gradlew clean build -x test
 
     # Google Cloud CLI 설정
     - name: Set up Google Cloud SDK
@@ -55,6 +55,7 @@ jobs:
     # Docker 이미지 빌드 및 GCR 업로드
     - name: Authenticate Docker to Google Cloud Container Registry (GCR)
       run: |
+        echo -n "${{ secrets.GCE_SA_KEY }}"
         echo -n "${{ secrets.GCE_SA_KEY }}" | base64 --decode > /tmp/gcloud-key.json
         gcloud auth activate-service-account --key-file=/tmp/gcloud-key.json
         gcloud auth configure-docker gcr.io
