--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -56,6 +56,7 @@ jobs:
     - name: Authenticate Docker to Google Cloud Container Registry (GCR)
       run: |
         echo -n "${{ secrets.GCE_SA_KEY }}" > /tmp/gcloud-key.json
+        cat /tmp/gcloud-key.json
         gcloud auth activate-service-account --key-file=/tmp/gcloud-key.json
         gcloud auth configure-docker gcr.io
 
