--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -77,6 +77,7 @@ jobs:
       run: |
         gcloud compute ssh ${{ secrets.GCE_INSTANCE }} --zone=${{ secrets.GCP_REGION }} --command="
         sudo usermod -aG docker $USER
+        newgrp docker
         docker pull ${{ secrets.DOCKER_IMAGE }} &&
         docker stop ${{ secrets.DOCKER_IMAGE }} || true &&
         docker rm ${{ secrets.DOCKER_IMAGE }} || true &&
