--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -80,9 +80,9 @@ jobs:
         newgrp docker
         gcloud auth configure-docker
         gcloud auth activate-service-account --key-file=/home/wabi241202/gce_sa_key.json
+        docker stop ${{ secrets.DOCKER_IMAGE }} &&
+        docker rm ${{ secrets.DOCKER_IMAGE }} &&
         docker pull ${{ secrets.DOCKER_IMAGE }} &&
-        docker stop ${{ secrets.DOCKER_IMAGE }} || true &&
-        docker rm ${{ secrets.DOCKER_IMAGE }} || true &&
         docker run -d --name moadong -p 8080:8080 ${{ secrets.DOCKER_IMAGE }}"
 
 #     - name: Docker build
