chore: package.json 추가

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
     "build:prod": "tsx ./node_modules/webpack-cli/bin/cli.js --config config/webpack.prod.ts",
     "clean": "rm -rf dist",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,css,scss}\"",
-    "lint": "eslint --fix"
+    "lint": "eslint --fix",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "chromatic": "chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "keywords": [],
   "author": "",
@@ -21,8 +24,17 @@
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.4",
     "@eslint/js": "^9.17.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/addon-onboarding": "^8.5.0",
+    "@storybook/addon-webpack5-compiler-swc": "^2.0.0",
+    "@storybook/blocks": "^8.5.0",
+    "@storybook/react": "^8.5.0",
+    "@storybook/react-webpack5": "^8.5.0",
+    "@storybook/test": "^8.5.0",
     "@types/html-webpack-plugin": "^3.2.9",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
@@ -30,14 +42,17 @@
     "@types/react-refresh": "^0.14.6",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.1",
+    "chromatic": "^11.25.0",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-storybook": "^0.11.2",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.4.2",
     "react-refresh": "^0.16.0",
+    "storybook": "^8.5.0",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "tsx": "^4.19.2",
@@ -48,5 +63,10 @@
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
     "webpack-merge": "^6.0.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
