feat: build-story.log 이그노어 추가

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -3,6 +3,7 @@ node_modules
 
 # Build artifacts, compiled files not needed in version control.
 dist
+build-storybook.log
 
 ### Environment Variable ###
 .env
