--- a/.github/workflows/gradle-release-publish.yml
+++ b/.github/workflows/gradle-release-publish.yml
@@ -3,7 +3,7 @@ name: release server CD with Gradle
 on:
   push:
     branches: ["main"]
-    paths: ["backend/**"]
+    paths: ["backend/**", ".github/workflows/gradle-release-publish.yml"]
 
 jobs:
   build:
