--- a/.github/workflows/gradle-develop-publish.yml
+++ b/.github/workflows/gradle-develop-publish.yml
@@ -3,6 +3,8 @@ name: develop server CD with Gradle
 on:
   push:
     branches: ["develop/be"]
+    paths: ["backend/**", ".github/workflows/gradle-develop-publish.yml"]
+
 
 jobs:
   build:
