feat: tsconfig 설정 변경 - alias 및 global 타입 파일 추가
- 경로 alias 설정 추가:
  - `baseUrl`을 `./`로 설정하고, `paths` 옵션에 `"@/*": ["src/*"]`를 추가하여,
    소스 코드에서 `@`를 사용해 `src` 폴더를 간편하게 참조할 수 있도록 함

- 글로벌 타입 파일 포함:
  - `include` 배열에 `types/global.d.ts` 파일을 추가하여 전역 타입 선언을 함께 컴파일하도록 설정

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,8 +10,14 @@
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
     "skipDefaultLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+    }
   },
-  "include": ["src"],
+  "include": ["src",
+    "types/global.d.ts"
+  ],
   "exclude": ["node_modules", "dist"]
 }
