refactor: global.d.ts 파일 위치 변경

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,7 +17,7 @@
     }
   },
   "include": ["src",
-    "types/global.d.ts"
+    "src/types/global.d.ts"
   ],
   "exclude": ["node_modules", "dist"]
 }
