--- a/.github/workflows/gradle-develop-publish.yml
+++ b/.github/workflows/gradle-develop-publish.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
-    - name: make application-prod.properties
+    - name: make application.properties
       run: | 
         cd ./backend/src/main/resources
-        touch ./application-prod.properties
+        touch ./application.properties
         echo "${{ secrets.APPLICATION_PROD_DEV }}" > ./application.properties
 
     - name: Grant execute permission for gradlew
