--- a/.github/workflows/gradle-release-publish.yml
+++ b/.github/workflows/gradle-release-publish.yml
@@ -24,11 +24,10 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
-    - name: make application-prod.properties
+    - name: make application.properties
       run: | 
         cd ./backend/src/main/resources
-        touch ./application-prod.properties
-        echo "${{ secrets.APPLICATION_PROD_RELEASE }}" > ./application-prod.properties
+        echo "${{ secrets.APPLICATION_PROD_RELEASE }}" > ./application.properties
 
     - name: Grant execute permission for gradlew
       run: chmod +x ./backend/gradlew
@@ -81,7 +80,7 @@ jobs:
         newgrp docker
 
         docker pull ${{ secrets.DOCKER_IMAGE_RELEASE }} &&
-        docker run -d --name moadong -p 8080:8080 ${{ secrets.DOCKER_IMAGE_RELEASE }}"
+        docker run -d --name moadong -v /home/wabi241202/gce_sa_key.json:/app/gce_sa_key.json -p 8080:8080 ${{ secrets.DOCKER_IMAGE_RELEASE }}"
 
 #     - name: Docker build
 #       run: |
