--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -28,6 +28,13 @@ jobs:
         run: | 
           cd ./backend/src/main/resources
           echo "${{ secrets.APPLICATION_PROD_DEV }}" > ./application.properties
+      
+      - name: create-json
+        id: create-json
+        uses: jsdaniell/create-json@v1.2.2
+        with:
+          name: "gce_sa_key.json"
+          json: ${{ secrets.GCE_SA_KEY }}
 
       - name: Grant execute permission for gradlew and test
         run: |
