--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -37,7 +37,9 @@ jobs:
           json: ${{ secrets.GCE_SA_KEY }}
 
       - name: Move JSON file
-        run: mv gce_sa_key.json /app/gce_sa_key.json
+        run: |
+          mkdir app
+          mv gce_sa_key.json /app/gce_sa_key.json
 
       - name: Grant execute permission for gradlew and test
         run: |
