--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -40,7 +40,8 @@ jobs:
         run: |
           mkdir app
           ls
-          mv gce_sa_key.json /app/gce_sa_key.json
+          pwd
+          mv gce_sa_key.json ./app/gce_sa_key.json
 
       - name: Grant execute permission for gradlew and test
         run: |
