--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -27,7 +27,7 @@ jobs:
       - name: make application.properties
         run: | 
           cd ./backend/src/main/resources
-          echo "${{ secrets.APPLICATION_PROD_DEV }}" > ./application.properties
+          echo "${{ secrets.APPLICATION_PR_TEST }}" > ./application.properties
       
       - name: create-json
         id: create-json
@@ -35,13 +35,6 @@ jobs:
         with:
           name: "gce_sa_key.json"
           json: ${{ secrets.GCE_SA_KEY }}
-
-      - name: Move JSON file
-        run: |
-          mkdir app
-          ls
-          pwd
-          mv gce_sa_key.json ./app/gce_sa_key.json
 
       - name: Grant execute permission for gradlew and test
         run: |
