--- a/.github/workflows/gradle-release-publish.yml
+++ b/.github/workflows/gradle-release-publish.yml
@@ -2,7 +2,7 @@ name: release server CD with Gradle
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "chore/#50-pr_test_for_ci"]
     paths: ["backend/**", ".github/workflows/gradle-release-publish.yml"]
 
 jobs:
