--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tanstack/react-query": "^5.66.0",
     "dotenv-webpack": "^8.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
