zero downtime deployment test

--- a/.github/workflows/server_cd_develop.yml
+++ b/.github/workflows/server_cd_develop.yml
@@ -1,6 +1,6 @@
-# .github/workflows/server_cd_dev.yml
+# .github/workflows/server_cd_develop.yml
 
-name: Server CD
+name: Develop Server CD
 
 on:
   push:
